--- a/index.html
+++ b/index.html
@@ -32,13 +32,41 @@
 						</header>
 						<p>I am junior student at University of Michigan in <a href="https://cse.engin.umich.edu/academics/undergraduate/computer-science-eng/">Computer Science</a>, with a dual degree of <a href="http://umji.sjtu.edu.cn/academics/undergraduate-program/electrical-and-computer-engineering/">Electrical and Computer Engineering</a> at Shanghai Jiao Tong Univeristy. I am currently discovering my research interests in how machine learning can be applied in natural language processing and bioinformatics.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Resume</a></li>
+							<li><a href="./resume2019.pdf" class="button">Resume</a></li>
 						</ul>
 					</section>
 
-				<!-- Two -->
-					<section id="two">
-						<h2>Recent Work</h2>
+						<!-- Two -->
+							<section id="two">
+								<div class="container">
+									<h3>Education</h3>
+									<ul> 
+										<li>
+											<b> University of Michigan, Ann Arbor </b> Sept. 2019 - Present <br>
+											<i> B.S. in Computer Science || GPA: 4.00/4.00 </i><br>
+											<font size=2>Course Highlights: Data Structure and Algorithm (A); Computer Organization (A+); Numerical Analysis (A+) </font>
+ 
+										</li>
+										<li>
+											<b> Shanghai Jiao Tong University </b> Sept. 2017 - Present <br>
+											<i> B.S. in Electrical and Computer Engineering || GPA: 3.81/4.00  </i> <br>
+											<font size=2>Course Highlights: Discrete Mathematics (A); Programming and Data Structure (A); Logic Design (A); Honor Mathematics II,III,IV (A-, A, A-)</font>
+										</li>
+										<li>
+											<b> Technischen Universitat Berlin </b> Jan. 2019 - Feb. 2019 <br>
+											<i> Winter Program: Programming in Java (A) </i>
+										</li>
+										<li>
+											<b> Chengdu Foreign Languages School </b> Sept. 2011 - June 2017  <br>
+											<i> High School </i>
+										</li>
+									</ul>
+								</div>
+							</section>
+
+				<!-- Three -->
+					<section id="three">
+						<h2>To be updated...</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
@@ -76,10 +104,10 @@
 						</ul>
 					</section>
 
-				<!-- Three -->
-					<section id="three">
+				<!-- Four -->
+					<section id="four">
 						<h2>Get In Touch</h2>
-						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
+						<p>To be updated.</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
 								<form method="post" action="#">
@@ -97,26 +125,27 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										1234 Somewhere Rd.<br />
-										Nashville, TN 00000<br />
+										1875 Lake Lila Ln.<br />
+										Ann Arbor, MI 48105<br />
 										United States
 									</li>
 									<li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										000-000-0000
+										
+ 734-545-9094
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
+										<a href="mailto: marstin@umich.edu">marstin@umich.edu</a>
 									</li>
 								</ul>
 							</div>
 						</div>
 					</section>
 
-				<!-- Four -->
+				<!-- Five -->
 				<!--
-					<section id="four">
+					<section id="five">
 						<h2>Elements</h2>
 
 						<section>
@@ -438,14 +467,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
+						<li><a href="https://github.com/Mars-tin" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.instagram.com/marstin0607/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.facebook.com/martin.ma.73932646" class="icon brands fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="mailto: marstin@umich.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 				</div>
 			</footer>
 
