--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<header class="major">
 							<h2>About Me</h2>
 						</header>
-						<p>I am junior student at University of Michigan in <a href="https://cse.engin.umich.edu/academics/undergraduate/computer-science-eng/">Computer Science</a>, with a dual degree of <a href="http://umji.sjtu.edu.cn/academics/undergraduate-program/electrical-and-computer-engineering/">Electrical and Computer Engineering</a> at Shanghai Jiao Tong Univeristy. I am currently discovering my research interests in how machine learning can be applied in natural language processing and bioinformatics.</p>
+						<p>I am junior student at University of Michigan in <a href="https://cse.engin.umich.edu/academics/undergraduate/computer-science-eng/">Computer Science</a>, with a dual degree of <a href="http://umji.sjtu.edu.cn/academics/undergraduate-program/electrical-and-computer-engineering/">Electrical and Computer Engineering</a> at Shanghai Jiao Tong Univeristy. I am currently discovering my research interests in how machine learning can be applied in natural language processing and bioinformatics. If you found that my Chinese name is hard to pronounce, just call me Martin alternatively.</p>
 						<ul class="actions">
 							<li><a href="./resume2019.pdf" class="button">Resume</a></li>
 						</ul>
