--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 						<header class="major">
 							<h2>About Me</h2>
 						</header>
-						<p>I am junior student at University of Michigan in <a href="https://cse.engin.umich.edu/academics/undergraduate/computer-science-eng/">Computer Science</a>, with a dual degree of <a href="http://umji.sjtu.edu.cn/academics/undergraduate-program/electrical-and-computer-engineering/">Electrical and Computer Engineering</a> at Shanghai Jiao Tong Univeristy. I am currently discovering my research interests in how machine learning can be applied in natural language processing and bioinformatics. If you found that my Chinese name is hard to pronounce, just call me Martin alternatively.</p>
+						<p>I am junior student at University of Michigan in <a href="https://cse.engin.umich.edu/academics/undergraduate/computer-science-eng/">Computer Science</a>, with a dual degree of <a href="http://umji.sjtu.edu.cn/academics/undergraduate-program/electrical-and-computer-engineering/">Electrical and Computer Engineering</a> at Shanghai Jiao Tong Univeristy. I am currently discovering my research interests in how machine learning can be applied in natural language processing and bioinformatics.<br> <br>
+If you find it hard to pronounce my Chinese name, it's totally fine to just call me Martin alternatively.</p>
 						<ul class="actions">
 							<li><a href="./resume2019.pdf" class="button">Resume</a></li>
 						</ul>
@@ -39,22 +40,23 @@
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Education</h3>
+									<h2>Education</h2>
 									<ul> 
 										<li>
 											<b> University of Michigan, Ann Arbor </b> Sept. 2019 - Present <br>
 											<i> B.S. in Computer Science || GPA: 4.00/4.00 </i><br>
-											<font size=2>Course Highlights: Data Structure and Algorithm (A); Computer Organization (A+); Numerical Analysis (A+) </font>
+											<font size=2>Data Structure and Algorithm (A); Computer Organization (A+); Numerical Analysis (A+) </font>
  
 										</li>
 										<li>
 											<b> Shanghai Jiao Tong University </b> Sept. 2017 - Present <br>
 											<i> B.S. in Electrical and Computer Engineering || GPA: 3.81/4.00  </i> <br>
-											<font size=2>Course Highlights: Discrete Mathematics (A); Programming and Data Structure (A); Logic Design (A); Honor Mathematics II,III,IV (A-, A, A-)</font>
+											<font size=2>Discrete Mathematics (A); Programming and Data Structure (A); Logic Design (A); Analog Circuits (A-); Probability and Statistics (A-); Honor Mathematics II,III,IV (A-, A, A-)</font>
 										</li>
 										<li>
 											<b> Technischen Universitat Berlin </b> Jan. 2019 - Feb. 2019 <br>
-											<i> Winter Program: Programming in Java (A) </i>
+											<i> Winter Program </i> <br>
+<font size=2>Programming in Java (A) </font>
 										</li>
 										<li>
 											<b> Chengdu Foreign Languages School </b> Sept. 2011 - June 2017  <br>
@@ -64,50 +66,148 @@
 								</div>
 							</section>
 
-				<!-- Three -->
-					<section id="three">
-						<h2>To be updated...</h2>
+<!-- Three -->
+							<section id="three">
+								<div class="container">
+									<h2>General Experience</h2>
+
+    <div id="timeline">
+      <div>
+
+        <section class="year">
+          <h3>2020</h3>
+
+          <section>
+            <h4>January - Present</h4>
+            <ul class="research">
+            	&#128270 Research Assistant at <a href="https://jieliu6.github.io/" target="_blank">Liu Lab</a> (Medical School, University of Michigan)
+            </ul>
+          </section>
+          
+        </section>
+
+        <section class="year">
+          <h3>2019</h3>
+
+          <section>
+            <h4>September - Present</h4>
+            <ul class="research">
+            	&#128270 Research Assistant at <a href="http://foreseer.si.umich.edu/" target="_blank">Foreseer research Group</a> (School of Information, University of Michigan)
+            </ul>
+          </section>
+
+          <section>
+            <h4>September</h4>
+            <ul>&#127979 Enrolled in <a href="https://umich.edu/">University of Michigan</a>. 
+		<li>Major: Computer Science (CS.Eng)</li>
+		</ul>
+          </section>
+
+          <section>
+            <h4>May - August</h4>
+            <ul>&#128214 Teaching Assistant for Physics Lab I (VP141 at Shanghai Jiao Tong University)</ul>
+          </section>
+
+          <section>
+            <h4>February - May</h4>
+            <ul>&#128214 Teaching Assistant for Academic Writing II (VY200 at Shanghai Jiao Tong University)</ul>
+          </section>
+
+          <section>
+            <h4>January - February</h4>
+            <ul>&#127979 Winter Program at Technischen Universitat Berlin</ul>
+          </section>
+
+        <section class="year">
+          <h3>2018</h3>
+
+          <section>
+            <h4>September - December</h4>
+            <ul>&#128214 Teaching Assistant for Academic Writing I (VY100 at Shanghai Jiao Tong University)</ul>
+          </section>
+
+          <section>
+            <h4>September</h4>
+            <ul>&#127942 Awarded China National Scholarship, issued by Ministry of Education of China</ul>
+          </section>
+
+        </section>
+
+	  <section class="year">
+          <h3>2017</h3>
+
+	    <section>
+            <h4>December - January</h4>
+            <ul>&#128214 Volunteer teaching math in San He Junior High School, Luxi, Yunan</ul>
+          </section>
+
+          <section>
+            <h4>September</h4>
+            <ul>
+	&#127979 Enrolled in <a href="https://www.sjtu.edu.cn/">Shanghai Jiao Tong University</a>. 
+	<li>Major: Electrical and Computer Engineering</li>
+	<li>With <a href="http://umji.sjtu.edu.cn/cn/news/2017-1222-1010/">John Wu & Jane Sun Excellence Scholarship</a></li>
+	</ul>
+          </section>
+	    <section>
+            <h4>June</h4>
+            <ul>&#127891 Got 685/750 in College Entrance Examination</ul>
+          </section>
+
+        </section>
+
+        <section class="year">
+          <h3>2014</h3>
+
+          <section>
+            <h4>September</h4>
+            <ul>
+		&#127979 Enrolled in <a href="http://www.cfls.net.cn/">Chengdu Foreign Languages School</a> (Senior)
+		<li>With 1st-class Scholarship</li>
+		</ul>
+			
+          </section>
+        </section>
+
+        <section class="year">
+          <h3>2011</h3>
+
+          <section>
+            <h4>September</h4>
+            <ul>
+		&#127979 Enrolled in Chengdu Foreign Languages School (Junior)
+		<li>With 2nd-class Scholarship</li>
+		</ul>
+		
+          </section>
+        </section>
+      </div>
+    </div>
+
+								</div>
+							</section>
+
+				<!-- Four -->
+					<section id="four">
+						<h2>Selected Projects</h2>
 						<div class="row">
+
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>To be updated</h3>
+								<p>This section is to be updated.</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
+
 						</div>
 						<ul class="actions">
 							<li><a href="#" class="button">Full Portfolio</a></li>
 						</ul>
 					</section>
 
-				<!-- Four -->
-					<section id="four">
+				<!-- Five -->
+					<section id="five">
 						<h2>Get In Touch</h2>
-						<p>To be updated.</p>
+						<p>This section is being built. To be updated...</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
 								<form method="post" action="#">
