--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ If you find it hard to pronounce my Chinese name, it's totally fine to just call
           <section>
             <h4>September - Present</h4>
             <ul class="research">
-            	&#128270 Research Assistant at <a href="http://foreseer.si.umich.edu/" target="_blank">Foreseer research Group</a> (School of Information, University of Michigan)
+            	&#128270 Research Assistant at <a href="http://foreseer.si.umich.edu/" target="_blank">Foreseer</a> (School of Information, University of Michigan)
             </ul>
           </section>
 
@@ -106,6 +106,13 @@ If you find it hard to pronounce my Chinese name, it's totally fine to just call
           <section>
             <h4>May - August</h4>
             <ul>&#128214 Teaching Assistant for Physics Lab I (VP141 at Shanghai Jiao Tong University)</ul>
+          </section>
+
+          <section>
+            <h4>February - December</h4>
+            <ul class="research">
+            	&#128270 Research Assistant at <a href="https://www.acemap.info/" target="_blank">Acemap</a> (School of Electronic Information and Electrical Engineering, Shanghai Jiao Tong University)
+            </ul>
           </section>
 
           <section>
