--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 						<header class="major">
 							<h2>About Me</h2>
 						</header>
-						<p>I am junior student at University of Michigan in <a href="https://cse.engin.umich.edu/academics/undergraduate/computer-science-eng/">Computer Science</a>, with a dual degree of <a href="http://umji.sjtu.edu.cn/academics/undergraduate-program/electrical-and-computer-engineering/">Electrical and Computer Engineering</a> at Shanghai Jiao Tong Univeristy. I am currently discovering my research interests in how machine learning can be applied in natural language processing and bioinformatics.<br> <br>
-If you find it hard to pronounce my Chinese name, it's totally fine to just call me Martin alternatively.</p>
+						<p>I am a junior student at University of Michigan in <a href="https://cse.engin.umich.edu/academics/undergraduate/computer-science-eng/">Computer Science</a>, with a dual degree of <a href="http://umji.sjtu.edu.cn/academics/undergraduate-program/electrical-and-computer-engineering/">Electrical and Computer Engineering</a> at Shanghai Jiao Tong Univeristy. I am currently discovering my research interests in how machine learning can be applied in natural language processing and bioinformatics.<br> <br>
+If you find it hard to pronounce my Chinese name, it's absolutely fine to just call me Martin alternatively.</p>
 						<ul class="actions">
 							<li><a href="./Resume2020.pdf" class="button">Resume</a></li>
 						</ul>
@@ -124,8 +124,11 @@ If you find it hard to pronounce my Chinese name, it's totally fine to just call
             <h4>January - February</h4>
             <ul>&#127979 Winter Program at Technischen Universitat Berlin</ul>
           </section>
-
+		
+        </section>
+	      
         <section class="year">
+		
           <h3>2018</h3>
 
           <section>
