--- a/index.html
+++ b/index.html
@@ -45,18 +45,31 @@ If you find it hard to pronounce my Chinese name, it's absolutely fine to just c
 										<li>
 											<b> University of Michigan, Ann Arbor </b> Sept. 2019 - Present <br>
 											<i> B.S. in Computer Science || GPA: 4.00/4.00 </i><br>
-											<font size=2>Data Structure and Algorithm (A); Computer Organization (A+); Numerical Analysis (A+) </font>
+											<font size=2>
+												Data Structure and Algorithm (A);
+												Computer Organization (A+);
+												Numerical Analysis (A+) 
+											</font>
  
 										</li>
 										<li>
 											<b> Shanghai Jiao Tong University </b> Sept. 2017 - Present <br>
 											<i> B.S. in Electrical and Computer Engineering || GPA: 3.81/4.00  </i> <br>
-											<font size=2>Discrete Mathematics (A); Programming and Data Structure (A); Logic Design (A); Analog Circuits (A-); Probability and Statistics (A-); Honor Mathematics II,III,IV (A-, A, A-)</font>
+											<font size=2>
+												Discrete Mathematics (A);
+												Programming and Data Structure (A);		
+												Analog Circuits (A-);
+												Logic Design (A);
+												Probability and Statistics (A-);
+												Honor Mathematics II-IV (A-, A, A-)
+											</font>
 										</li>
 										<li>
 											<b> Technischen Universitat Berlin </b> Jan. 2019 - Feb. 2019 <br>
 											<i> Winter Program </i> <br>
-<font size=2>Programming in Java (A) </font>
+											<font size=2>
+												Programming in Java (A) 
+											</font>
 										</li>
 										<li>
 											<b> Chengdu Foreign Languages School </b> Sept. 2011 - June 2017  <br>
