--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@ If you find it hard to pronounce my Chinese name, it's absolutely fine to just c
 											<b> University of Michigan, Ann Arbor </b> Sept. 2019 - Present <br>
 											<i> B.S. in Computer Science || GPA: 4.00/4.00 </i><br>
 											<font size=2>
-												Data Structure and Algorithm (A);
-												Computer Organization (A+);
-												Numerical Analysis (A+) 
+												<ul>
+													<li>Data Structure and Algorithm (A);</li>
+													<li>Computer Organization (A+);</li>
+													<li>Numerical Analysis (A+) </li>
+												</ul>												
 											</font>
  
 										</li>
@@ -56,12 +58,14 @@ If you find it hard to pronounce my Chinese name, it's absolutely fine to just c
 											<b> Shanghai Jiao Tong University </b> Sept. 2017 - Present <br>
 											<i> B.S. in Electrical and Computer Engineering || GPA: 3.81/4.00  </i> <br>
 											<font size=2>
-												Discrete Mathematics (A);
-												Programming and Data Structure (A);		
-												Analog Circuits (A-);
-												Logic Design (A);
-												Probability and Statistics (A-);
-												Honor Mathematics II-IV (A-, A, A-)
+												<ul>
+													<li>Discrete Mathematics (A);</li>
+													<li>Programming and Data Structure (A);</li>	
+													<li>Analog Circuits (A-);</li>
+													<li>Logic Design (A);</li>
+													<li>Probability and Statistics (A-);</li>
+													<li>Honor Mathematics II-IV (A-, A, A-)</li>
+												</ul>
 											</font>
 										</li>
 										<li>
