--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ If you find it hard to pronounce my Chinese name, it's absolutely fine to just c
 												<ul>
 													<li>Data Structure and Algorithm (A);</li>
 													<li>Computer Organization (A+);</li>
-													<li>Numerical Analysis (A+) </li>
+													<li>Numerical Analysis (A+).</li>
 												</ul>												
 											</font>
  
@@ -64,7 +64,7 @@ If you find it hard to pronounce my Chinese name, it's absolutely fine to just c
 													<li>Analog Circuits (A-);</li>
 													<li>Logic Design (A);</li>
 													<li>Probability and Statistics (A-);</li>
-													<li>Honor Mathematics II-IV (A-, A, A-)</li>
+													<li>Honor Mathematics II-IV (A-, A, A-).</li>
 												</ul>
 											</font>
 										</li>
@@ -72,7 +72,9 @@ If you find it hard to pronounce my Chinese name, it's absolutely fine to just c
 											<b> Technischen Universitat Berlin </b> Jan. 2019 - Feb. 2019 <br>
 											<i> Winter Program </i> <br>
 											<font size=2>
-												Programming in Java (A) 
+												<ul>
+													<li>Programming in Java.(A)</li>
+												</ul>												
 											</font>
 										</li>
 										<li>
@@ -222,7 +224,7 @@ If you find it hard to pronounce my Chinese name, it's absolutely fine to just c
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 								<h3>To be updated</h3>
-								<p>This section is to be updated.</p>
+								<p>This section is being built. To be updated...</p>
 							</article>
 
 						</div>
@@ -233,6 +235,16 @@ If you find it hard to pronounce my Chinese name, it's absolutely fine to just c
 
 				<!-- Five -->
 					<section id="five">
+						<h2>News and Fun Facts</h2>
+						<ul>
+							<li>I post Instagram more frequently than Facebook and Twitter.</li>
+							<li>I am a super fan of <a href="https://nightwish.com/">Nightwish</a>. My favourite album is <a href="https://music.apple.com/us/album/imaginaerum/482858875">Imaginaerum</a>.</li>
+							<li>My dream school during high school was The University of Hong Kong (HKU), yet I declined the offer of BSc(QFin) in pursuit of my engineering dream.</li>							
+						</ul>
+					</section>
+				
+				<!-- Six -->
+					<section id="six">
 						<h2>Get In Touch</h2>
 						<p>This section is being built. To be updated...</p>
 						<div class="row">
