--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ If you find it hard to pronounce my Chinese name, it's absolutely fine to just c
 				<!-- Six -->
 					<section id="six">
 						<h2>Get In Touch</h2>
-						<p>This section is being built. To be updated...</p>
+						<p>I disabled this section to avoid email spam...Yet, you are welcome to drop me a message via email, etc.</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
 								<form method="post" action="#">
@@ -270,12 +270,15 @@ If you find it hard to pronounce my Chinese name, it's absolutely fine to just c
 									</li>
 									<li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										
- 734-545-9094
+										734-545-9094
 									</li>
 									<li>
-										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="mailto: marstin@umich.edu">marstin@umich.edu</a>
+										<h3 class="icon solid fa-weixin"><span class="label">Public WeChat</span></h3>
+										marstin0607
+									</li>
+									<li>
+										<h3 class="icon solid fa-qq"><span class="label">Public WeChat</span></h3>
+										1137610417
 									</li>
 								</ul>
 							</div>
