--- a/index.html
+++ b/index.html
@@ -273,11 +273,11 @@ If you find it hard to pronounce my Chinese name, it's absolutely fine to just c
 										734-545-9094
 									</li>
 									<li>
-										<h3 class="icon solid fa-weixin"><span class="label">Public WeChat</span></h3>
+										<h3 class="fa fa-weixin"><span class="label">Public WeChat</span></h3>
 										marstin0607
 									</li>
 									<li>
-										<h3 class="icon solid fa-qq"><span class="label">Public WeChat</span></h3>
+										<h3 class="fa fa-qq"><span class="label">Public WeChat</span></h3>
 										1137610417
 									</li>
 								</ul>
