--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 								Sept. 2019 - Present<br>
 								<i> B.S. in Computer Science || GPA: 4.00/4.00 </i><br>
 
-								<span style="font-size: x-small; "><ul>
+								<ul>
 									<li>Machine Learning (A+);(/li)
 									<li>Artificial Intelligence (A);</li>
 									<li>Web Systems (A);</li>
@@ -111,7 +111,7 @@
 									<li>Computer Organization (A+);</li>
 									<li>Numerical Analysis (A+).</li>
 									<li>Probability (A);</li>
-								</ul></span>
+								</ul>
 							</li>
 
 							<li>
@@ -119,13 +119,13 @@
 								Sept. 2017 - Present<br>
 								<i> B.S. in Electrical and Computer Engineering || GPA: 3.81/4.00 </i><br>
 
-								<span style="font-size: x-small; "><ul>
+								<ul>
 									<li>Discrete Mathematics (A);</li>
 									<li>Programming and Data Structure (A);</li>
 									<li>Analog Circuits (A-);</li>
 									<li>Logic Design (A);</li>
 									<li>Honor Mathematics II-IV (A-, A, A-).</li>
-								</ul></span>
+								</ul>
 							</li>
 
 							<li>
@@ -133,9 +133,9 @@
 								Jan. 2019 - Feb. 2019 <br>
 								<i> Winter Program </i><br>
 
-								<span style="font-size: x-small; "><ul>
+								<ul>
 									<li>Programming in Java.(A)</li>
-								</ul></span>
+								</ul>
 							</li>
 
 							<li>
@@ -153,162 +153,164 @@
 						<h2>General Experience</h2>
 
     					<div id="timeline">
+							<div>
 
-							<!-- 2020 -->
-								<section class="year">
-									<h3>2020</h3>
+								<!-- 2020 -->
+									<section class="year">
+										<h3>2020</h3>
 
-									<section>
-										<h4>January - Present</h4>
-										<ul class="research">
-											&#128270 Research Assistant at
-											<a href="https://jieliu6.github.io/" target="_blank">Liu Lab</a><br>
-											(Medical School, University of Michigan)
-										</ul>
+										<section>
+											<h4>January - Present</h4>
+											<ul class="research">
+												&#128270 Research Assistant at
+												<a href="https://jieliu6.github.io/" target="_blank">Liu Lab</a><br>
+												(Medical School, University of Michigan)
+											</ul>
+										</section>
+
 									</section>
 
-								</section>
+								<!-- 2019 -->
+									<section class="year">
+										<h3>2019</h3>
 
-							<!-- 2019 -->
-        						<section class="year">
-          							<h3>2019</h3>
+										<section>
+											<h4>September - Present</h4>
+											<ul class="research">
+												&#128270 Research Assistant at
+												<a href="http://foreseer.si.umich.edu/" target="_blank">Foreseer</a><br>
+												(School of Information, University of Michigan)
+											</ul>
+										</section>
 
-								  	<section>
-										<h4>September - Present</h4>
-										<ul class="research">
-											&#128270 Research Assistant at
-											<a href="http://foreseer.si.umich.edu/" target="_blank">Foreseer</a><br>
-											(School of Information, University of Michigan)
-										</ul>
-								  	</section>
+										<section>
+											<h4>September</h4>
+											<ul>
+												&#127979 Enrolled in
+												<a href="https://umich.edu/">University of Michigan</a>.
+												<li>Major: Computer Science (CS.Eng)</li>
+											</ul>
+										</section>
 
-								  	<section>
-										<h4>September</h4>
-										<ul>
-											&#127979 Enrolled in
-											<a href="https://umich.edu/">University of Michigan</a>.
-											<li>Major: Computer Science (CS.Eng)</li>
-										</ul>
-								  	</section>
+										<section>
+											<h4>May - August</h4>
+											<ul>
+												&#128214 Teaching Assistant for Physics Lab I<br>
+												(VP141 @ Shanghai Jiao Tong University)
+											</ul>
+										</section>
 
-									<section>
-										<h4>May - August</h4>
-										<ul>
-											&#128214 Teaching Assistant for Physics Lab I<br>
-											(VP141 @ Shanghai Jiao Tong University)
-										</ul>
-								  	</section>
+										<section>
+											<h4>February - December</h4>
+											<ul class="research">
+												&#128270 Research Assistant at
+												<a href="https://www.acemap.info/" target="_blank">Acemap</a><br>
+												(School of Electronic Information and Electrical Engineering, Shanghai Jiao Tong University)
+											</ul>
+										</section>
 
-								  	<section>
-										<h4>February - December</h4>
-										<ul class="research">
-											&#128270 Research Assistant at
-											<a href="https://www.acemap.info/" target="_blank">Acemap</a><br>
-											(School of Electronic Information and Electrical Engineering, Shanghai Jiao Tong University)
-										</ul>
-								  	</section>
+										<section>
+											<h4>February - May</h4>
+											<ul>
+												&#128214 Teaching Assistant for Academic Writing II<br>
+												(VY200 @ Shanghai Jiao Tong University)
+											</ul>
+										</section>
 
-								   	<section>
-										<h4>February - May</h4>
-										<ul>
-											&#128214 Teaching Assistant for Academic Writing II<br>
-											(VY200 @ Shanghai Jiao Tong University)
-										</ul>
+										<section>
+											<h4>January - February</h4>
+											<ul>&#127979 Winter Program @ Technischen Universitat Berlin</ul>
+										</section>
+
 									</section>
 
-									<section>
-										<h4>January - February</h4>
-										<ul>&#127979 Winter Program @ Technischen Universitat Berlin</ul>
-								  	</section>
-		
-        						</section>
+								<!-- 2018 -->
+									<section class="year">
+										<h3>2018</h3>
 
-							<!-- 2018 -->
-        						<section class="year">
-									<h3>2018</h3>
+										<section>
+											<h4>September - December</h4>
+											<ul>
+												&#128214 Teaching Assistant for Academic Writing I<br>
+												(VY100 @ Shanghai Jiao Tong University)
+											</ul>
+										</section>
 
-								  	<section>
-										<h4>September - December</h4>
-										<ul>
-											&#128214 Teaching Assistant for Academic Writing I<br>
-											(VY100 @ Shanghai Jiao Tong University)
-										</ul>
-								  	</section>
+										<section>
+											<h4>September</h4>
+											<ul>
+												&#127942 Awarded China National Scholarship,
+												issued by Ministry of Education of China
+											</ul>
+										</section>
 
-								  	<section>
-										<h4>September</h4>
-										<ul>
-											&#127942 Awarded China National Scholarship,
-											issued by Ministry of Education of China
-										</ul>
-								  	</section>
-
-        						</section>
-
-							<!-- 2017 -->
-								<section class="year">
-          							<h3>2017</h3>
-
-									<section>
-										<h4>December - January</h4>
-										<ul>
-											&#128214 Volunteer Teaching Junior Mathematics
-											@ San He Junior High School, Luxi, Yunan
-										</ul>
 									</section>
 
-								  	<section>
-										<h4>September</h4>
-										<ul>
-											&#127979 Enrolled in <a href="https://www.sjtu.edu.cn/">Shanghai Jiao Tong University</a>.
-											<li>Major: Electrical and Computer Engineering</li>
-											<li>
-												Awarded
-												<a href="http://umji.sjtu.edu.cn/cn/news/2017-1222-1010/">
-													John Wu & Jane Sun Excellence Scholarship
-												</a>
-											</li>
-										</ul>
-								  	</section>
+								<!-- 2017 -->
+									<section class="year">
+										<h3>2017</h3>
 
-									<section>
-										<h4>June</h4>
-										<ul>
-											&#127891 Got 685/750 in College Entrance Examination
-										</ul>
+										<section>
+											<h4>December - January</h4>
+											<ul>
+												&#128214 Volunteer Teaching Junior Mathematics
+												@ San He Junior High School, Luxi, Yunan
+											</ul>
+										</section>
+
+										<section>
+											<h4>September</h4>
+											<ul>
+												&#127979 Enrolled in <a href="https://www.sjtu.edu.cn/">Shanghai Jiao Tong University</a>.
+												<li>Major: Electrical and Computer Engineering</li>
+												<li>
+													Awarded
+													<a href="http://umji.sjtu.edu.cn/cn/news/2017-1222-1010/">
+														John Wu & Jane Sun Excellence Scholarship
+													</a>
+												</li>
+											</ul>
+										</section>
+
+										<section>
+											<h4>June</h4>
+											<ul>
+												&#127891 Got 685/750 in College Entrance Examination
+											</ul>
+										</section>
+
 									</section>
 
-        						</section>
+								<!-- 2014 -->
+									<section class="year">
+										<h3>2014</h3>
 
-							<!-- 2014 -->
-								<section class="year">
-								  	<h3>2014</h3>
+										<section>
+											<h4>September</h4>
+											<ul>
+												&#127979 Enrolled in
+												<a href="http://www.cfls.net.cn/">Chengdu Foreign Languages School</a> (Senior)
+												<li>Awarded 1st-class Scholarship</li>
+											</ul>
+										</section>
 
-								  	<section>
-										<h4>September</h4>
-										<ul>
-											&#127979 Enrolled in
-											<a href="http://www.cfls.net.cn/">Chengdu Foreign Languages School</a> (Senior)
-											<li>Awarded 1st-class Scholarship</li>
-										</ul>
 									</section>
 
-								</section>
+								<!-- 2011 -->
+									<section class="year">
+										<h3>2011</h3>
 
-							<!-- 2011 -->
-        						<section class="year">
-          							<h3>2011</h3>
+										<section>
+											<h4>September</h4>
+											<ul>
+												&#127979 Enrolled in
+												<a href="http://www.cfls.net.cn/">Chengdu Foreign Languages School</a> (Junior)
+												<li>Awarded 2nd-class Scholarship</li>
+											</ul>
+										</section>
 
-								  	<section>
-										<h4>September</h4>
-										<ul>
-											&#127979 Enrolled in
-											<a href="http://www.cfls.net.cn/">Chengdu Foreign Languages School</a> (Junior)
-											<li>Awarded 2nd-class Scholarship</li>
-										</ul>
-								  	</section>
-
-        						</section>
+									</section>
+							</div>
       					</div>
     				</div>
 				</section>
