--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 								Sept. 2019 - Present<br>
 								<i> B.S. in Computer Science || GPA: 4.00/4.00 </i><br>
 
-								<ul>
+								<span style="font-size: small; "><ul>
 									<li>Machine Learning (A+);(/li)
 									<li>Artificial Intelligence (A);</li>
 									<li>Web Systems (A);</li>
@@ -111,7 +111,7 @@
 									<li>Computer Organization (A+);</li>
 									<li>Numerical Analysis (A+).</li>
 									<li>Probability (A);</li>
-								</ul>
+								</ul></span>
 							</li>
 
 							<li>
@@ -119,13 +119,13 @@
 								Sept. 2017 - Present<br>
 								<i> B.S. in Electrical and Computer Engineering || GPA: 3.81/4.00 </i><br>
 
-								<ul>
+								<span style="font-size: small; "><ul>
 									<li>Discrete Mathematics (A);</li>
 									<li>Programming and Data Structure (A);</li>
 									<li>Analog Circuits (A-);</li>
 									<li>Logic Design (A);</li>
 									<li>Honor Mathematics II-IV (A-, A, A-).</li>
-								</ul>
+								</ul></span>
 							</li>
 
 							<li>
@@ -133,9 +133,9 @@
 								Jan. 2019 - Feb. 2019 <br>
 								<i> Winter Program </i><br>
 
-								<ul>
+								<span style="font-size: small; "><ul>
 									<li>Programming in Java.(A)</li>
-								</ul>
+								</ul></span>
 							</li>
 
 							<li>
