--- a/index.html
+++ b/index.html
@@ -32,12 +32,10 @@
 		<!-- Navigator -->
 			<nav id="nav">
 				<ul>
-					<li><a href="#one" class="active">About Me</a></li>
-					<li><a href="#two">Education</a></li>
-					<li><a href="#three">Portfolio</a></li>
-					<li><a href="#four">Experience</a></li>
-					<li><a href="#five">Posts</a></li>
-					<li><a href="#six">Get in Touch</a></li>
+					<li><a href="#two" class="inactive">Education</a></li>
+					<li><a href="#three" class="inactive">Experience</a></li>
+					<li><a href="#four" class="inactive">Portfolio</a></li>
+					<li><a href="#five" class="inactive">Posts</a></li>
 				</ul>
 			</nav>
 
@@ -410,6 +408,8 @@
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.poptrox.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
