--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 								<i> B.S. in Computer Science || GPA: 4.00/4.00 </i><br>
 
 								<span style="font-size: small; "><ul>
-									<li>Machine Learning (A+);(/li)
+									<li>Machine Learning (A+);</li>
 									<li>Artificial Intelligence (A);</li>
 									<li>Web Systems (A);</li>
 									<li>Data Structure and Algorithm (A);</li>
