--- a/index.html
+++ b/index.html
@@ -339,6 +339,7 @@
 						<h2>Posts</h2>
 						<ul>
 							<li>I post Instagram more frequently than Facebook and Twitter.</li>
+							<li>I enjoyed travelling and have been to 12 countries.</li>
 							<li>I am a super fan of <a href="https://nightwish.com/">Nightwish</a>. My favourite album is <a href="https://music.apple.com/us/album/imaginaerum/482858875">Imaginaerum</a>.</li>
 							<li>My dream school during high school was The University of Hong Kong (HKU), yet I declined the offer of BSc(QFin) in pursuit of my engineering dream.</li>							
 						</ul>
@@ -348,28 +349,36 @@
 					<section id="six">
 						<h2>Get In Touch</h2>
 						<p>
-							I disabled this section to avoid email spam...
-							Yet, you are welcome to drop me a message via email, etc.
+							You are welcome to drop me a message :)
 						</p>
 
 						<div class="row">
 
 							<div class="col-8 col-12-small">
 
-								<form method="post" action="#">
+								<form method="post" action="https://formspree.io/xgenednv">
 									<div class="row gtr-uniform gtr-50">
+
 										<div class="col-6 col-12-xsmall">
 											<label for="name"></label>
-											<input type="text" name="name" id="name" placeholder="Name" />
+											<input type="text" name="name" id="name" placeholder="Your Name" />
 										</div>
+
 										<div class="col-6 col-12-xsmall">
 											<label for="email"></label>
-											<input type="email" name="email" id="email" placeholder="Email" />
+											<input type="email" name="email" id="email" placeholder="Your Email" />
 										</div>
+
+										<div class="col-12">
+											<label for="subject"></label>
+											<input type="text" name="subject" id="subject" placeholder="Subject" />
+										</div>
+
 										<div class="col-12">
 											<label for="message"></label>
 											<textarea name="message" id="message" placeholder="Message" rows="4"></textarea>
 										</div>
+
 									</div>
 								</form>
 
@@ -403,8 +412,18 @@
 							</div>
 						</div>
 					</section>
-		</div>
 
+
+				<!-- Footer -->
+					<section id="seven">
+						<div class="container">
+							<ul class="copyright">
+								<li>&copy; Ziqiao Ma</li><li>Designed with <a href="http://html5up.net">HTML5 UP</a></li>
+							</ul>
+						</div>
+					</section>
+
+		</div>
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.poptrox.min.js"></script>
