--- a/index.html
+++ b/index.html
@@ -40,22 +40,33 @@
 			</nav>
 
 		<!-- Footer -->
-			<footer id="footer">
+			<footer>
 				<div class="inner">
+
 					<ul class="icons">
+
 						<li><a href="https://github.com/Mars-tin" class="icon brands fa-github">
 							<span class="label">Github</span>
 						</a></li>
+
 						<li><a href="https://www.instagram.com/marstin0607/" class="icon brands fa-instagram">
 							<span class="label">Instagram</span>
 						</a></li>
+
 						<li><a href="https://www.facebook.com/martin.ma.73932646" class="icon brands fa-facebook">
 							<span class="label">Facebook</span>
 						</a></li>
+
+						<li><a href="https://www.linkedin.com/in/ziqiao-ma" class="icon brands fa-linkedin-in">
+							<span class="label">Facebook</span>
+						</a></li>
+
 						<li><a href="mailto: marstin@umich.edu" class="icon solid fa-envelope">
 							<span class="label">Email</span>
 						</a></li>
+
 					</ul>
+
 				</div>
 			</footer>
 	</section>
@@ -79,10 +90,11 @@
 							Electrical and Computer Engineering
 						</a>
 						at Shanghai Jiao Tong University.
-						I am currently discovering my research interests
-						in how machine learning can be applied in natural language processing and bio-informatics.<br><br>
-						If you find it hard to pronounce my Chinese name,
-						it's absolutely fine to just call me Martin alternatively.
+						I am currently exploring my research interests
+						in how machine learning can play a role
+						in natural language processing and bio-informatics.<br><br>
+						Many of my non-Chinese friends found it hard to pronounce my Chinese name,
+						so...it's absolutely fine to just call me Martin alternatively.
 					</p>
 
 					<ul class="actions">
@@ -101,15 +113,28 @@
 								Sept. 2019 - Present<br>
 								<i> B.S. in Computer Science || GPA: 4.00/4.00 </i><br>
 
-								<span style="font-size: small; "><ul>
-									<li>Machine Learning (A+);</li>
-									<li>Artificial Intelligence (A);</li>
-									<li>Web Systems (A);</li>
-									<li>Data Structure and Algorithm (A);</li>
-									<li>Computer Organization (A+);</li>
-									<li>Numerical Analysis (A+).</li>
-									<li>Probability (A);</li>
-								</ul></span>
+								<div class="row">
+									<div class="column">
+										<span style="font-size: small; "><ul>
+											<li>Machine Learning (A+)</li>
+											<li>Artificial Intelligence (A)</li>
+											<li>Web Systems (A)</li>
+										</ul></span>
+								  	</div>
+								  	<div class="column">
+										<span style="font-size: small; "><ul>
+											<li>Data Structure and Algorithm (A)</li>
+											<li>Computer Organization (A+)</li>
+										</ul></span>
+								  	</div>
+									<div class="column">
+										<span style="font-size: small; "><ul>
+											<li>Numerical Analysis (A+)</li>
+											<li>Probability Theory (A)</li>
+										</ul></span>
+								  	</div>
+								</div>
+
 							</li>
 
 							<li>
@@ -117,13 +142,21 @@
 								Sept. 2017 - Present<br>
 								<i> B.S. in Electrical and Computer Engineering || GPA: 3.81/4.00 </i><br>
 
-								<span style="font-size: small; "><ul>
-									<li>Discrete Mathematics (A);</li>
-									<li>Programming and Data Structure (A);</li>
-									<li>Analog Circuits (A-);</li>
-									<li>Logic Design (A);</li>
-									<li>Honor Mathematics II-IV (A-, A, A-).</li>
-								</ul></span>
+								<div class="row">
+								  	<div class="column">
+										<span style="font-size: small; "><ul>
+											<li>Programming and Data Structure (A)</li>
+											<li>Logic Design (A)</li>
+											<li>Analog Circuits (A-)</li>
+										</ul></span>
+								  	</div>
+									<div class="column">
+										<span style="font-size: small; "><ul>
+											<li>Discrete Mathematics (A)</li>
+											<li>Honors Mathematics II-IV (A-, A, A-)</li>
+										</ul></span>
+								  	</div>
+								</div>
 							</li>
 
 							<li>
@@ -132,7 +165,7 @@
 								<i> Winter Program </i><br>
 
 								<span style="font-size: small; "><ul>
-									<li>Programming in Java.(A)</li>
+									<li>Programming in Java (A)</li>
 								</ul></span>
 							</li>
 
@@ -338,10 +371,13 @@
 					<section id="five">
 						<h2>Posts</h2>
 						<ul>
-							<li>I post Instagram more frequently than Facebook and Twitter.</li>
-							<li>I enjoyed travelling and have been to 12 countries.</li>
-							<li>I am a super fan of <a href="https://nightwish.com/">Nightwish</a>. My favourite album is <a href="https://music.apple.com/us/album/imaginaerum/482858875">Imaginaerum</a>.</li>
-							<li>My dream school during high school was The University of Hong Kong (HKU), yet I declined the offer of BSc(QFin) in pursuit of my engineering dream.</li>							
+							<li>I was born and raised up in Chengdu, the city famous for being the home of pandas.</li>
+							<li>My dream school during high school was The University of Hong Kong (HKU),
+								yet I declined the offer of BSc(QFin) in pursuit of my engineering dream.</li>
+							<li>I am a regular social media user, and I post Instagram more frequently.</li>
+							<li>I enjoyed travelling and have been to 12 countries. Maybe I have been to your hometown?</li>
+							<li>I am a super fan of <a href="https://nightwish.com/">Nightwish</a>.
+								My favourite album is <a href="https://music.apple.com/us/album/imaginaerum/482858875">Imaginaerum</a>.</li>
 						</ul>
 					</section>
 				
@@ -370,32 +406,20 @@
 										</div>
 
 										<div class="col-12">
-											<label for="subject"></label>
-											<input type="text" name="subject" id="subject" placeholder="Subject" />
-										</div>
-
-										<div class="col-12">
 											<label for="message"></label>
 											<textarea name="message" id="message" placeholder="Message" rows="4"></textarea>
 										</div>
 
+										<ul class="actions">
+											<li><input type="submit" value="Send Message" /></li>
+										</ul>
+
 									</div>
 								</form>
-
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-
 							</div>
 
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
-									<li>
-										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										1875 Lake Lila Ln.<br />
-										Ann Arbor, MI 48105<br />
-										United States
-									</li>
 									<li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
 										734-545-9094
@@ -408,17 +432,24 @@
 										<h3 class="fab fa-qq"></h3>
 										1137610417
 									</li>
+									<li>
+										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
+										1875 Lake Lila Ln.<br />
+										Ann Arbor, MI 48105<br />
+										United States
+									</li>
 								</ul>
 							</div>
+
 						</div>
 					</section>
 
 
 				<!-- Footer -->
-					<section id="seven">
+					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Ziqiao Ma</li><li>Designed with <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Ziqiao Ma | Designed with <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
