--- a/index.html
+++ b/index.html
@@ -94,12 +94,32 @@
 						in how machine learning can play a role
 						in natural language processing and bio-informatics.<br><br>
 						Many of my non-Chinese friends found it hard to pronounce my Chinese name,
-						so...it's absolutely fine to just call me Martin alternatively.
+						so...it's absolutely fine to just call me <i>Martin</i> alternatively.
 					</p>
 
-					<ul class="actions">
-						<li><a href="Resume2020.pdf" class="button">Resume</a></li>
-					</ul>
+					<div class="row">
+						<div class="column">
+							<ul class="actions">
+								<li><a href="Resume2020.pdf" class="button">Resume</a></li>
+							</ul>
+						</div>
+						<div class="column">
+							Proficient in:<br>
+							<a href="#" target="_blank" class="button small">Python</a>
+							<a href="#" target="_blank" class="button small">C/C++</a>
+							<a href="#" target="_blank" class="button small">Matlab</a>
+						</div>
+						<div class="column">
+							Familiar with:<br>
+							<a href="#" target="_blank" class="button small">Java</a>
+							<a href="#" target="_blank" class="button small">SQL</a>
+							<a href="#" target="_blank" class="button small">JavaScript</a>
+							<a href="#" target="_blank" class="button small">Hadoop</a>
+							<a href="#" target="_blank" class="button small">R</a>
+						</div>
+
+					</div>
+
 				</section>
 
 			<!-- Two: Education -->
@@ -110,8 +130,7 @@
 						<ul>
 							<li>
 								<b>University of Michigan, Ann Arbor</b><br>
-								Sept. 2019 - Present<br>
-								<i> B.S. in Computer Science || GPA: 4.00/4.00 </i><br>
+								<i> B.S. in Computer Science || GPA: 4.00/4.00 || Sept. 2019 - Present</i><br>
 
 								<div class="row">
 									<div class="column">
@@ -139,8 +158,7 @@
 
 							<li>
 								<b>Shanghai Jiao Tong University</b><br>
-								Sept. 2017 - Present<br>
-								<i> B.S. in Electrical and Computer Engineering || GPA: 3.81/4.00 </i><br>
+								<i> B.S. in Electrical and Computer Engineering || GPA: 3.81/4.00 || Sept. 2017 - Present</i><br>
 
 								<div class="row">
 								  	<div class="column">
@@ -161,8 +179,7 @@
 
 							<li>
 								<b>Technischen Universitat Berlin </b><br>
-								Jan. 2019 - Feb. 2019 <br>
-								<i> Winter Program </i><br>
+								<i> Winter Program || Jan. 2019 - Feb. 2019</i><br>
 
 								<span style="font-size: small; "><ul>
 									<li>Programming in Java (A)</li>
@@ -170,9 +187,8 @@
 							</li>
 
 							<li>
-								<b> Chengdu Foreign Languages School </b><br>
-								Sept. 2011 - June 2017 <br>
-								<i> High School </i>
+								<b> Chengdu Foreign Languages School </b> <br>
+								<i> High School || Sept. 2011 - June 2017</i>
 							</li>
 						</ul>
 					</div>
@@ -195,7 +211,7 @@
 											<ul class="research">
 												&#128270 Research Assistant at
 												<a href="https://jieliu6.github.io/" target="_blank">Liu Lab</a><br>
-												(Medical School, University of Michigan)
+												(Medical School @ University of Michigan)
 											</ul>
 										</section>
 
@@ -210,13 +226,13 @@
 											<ul class="research">
 												&#128270 Research Assistant at
 												<a href="http://foreseer.si.umich.edu/" target="_blank">Foreseer</a><br>
-												(School of Information, University of Michigan)
+												(School of Information @ University of Michigan)
 											</ul>
 										</section>
 
 										<section>
 											<h4>September</h4>
-											<ul>
+											<ul class="edu">
 												&#127979 Enrolled in
 												<a href="https://umich.edu/">University of Michigan</a>.
 												<li>Major: Computer Science (CS.Eng)</li>
@@ -225,7 +241,7 @@
 
 										<section>
 											<h4>May - August</h4>
-											<ul>
+											<ul class="tutor">
 												&#128214 Teaching Assistant for Physics Lab I<br>
 												(VP141 @ Shanghai Jiao Tong University)
 											</ul>
@@ -236,13 +252,13 @@
 											<ul class="research">
 												&#128270 Research Assistant at
 												<a href="https://www.acemap.info/" target="_blank">Acemap</a><br>
-												(School of Electronic Information and Electrical Engineering, Shanghai Jiao Tong University)
+												(School of Electronic Information @ Shanghai Jiao Tong University)
 											</ul>
 										</section>
 
 										<section>
 											<h4>February - May</h4>
-											<ul>
+											<ul class="tutor">
 												&#128214 Teaching Assistant for Academic Writing II<br>
 												(VY200 @ Shanghai Jiao Tong University)
 											</ul>
@@ -250,7 +266,9 @@
 
 										<section>
 											<h4>January - February</h4>
-											<ul>&#127979 Winter Program @ Technischen Universitat Berlin</ul>
+											<ul class="edu">
+												&#127979 Winter Program @ Technischen Universitat Berlin
+											</ul>
 										</section>
 
 									</section>
@@ -261,7 +279,7 @@
 
 										<section>
 											<h4>September - December</h4>
-											<ul>
+											<ul class="tutor">
 												&#128214 Teaching Assistant for Academic Writing I<br>
 												(VY100 @ Shanghai Jiao Tong University)
 											</ul>
@@ -283,7 +301,7 @@
 
 										<section>
 											<h4>December - January</h4>
-											<ul>
+											<ul class="tutor">
 												&#128214 Volunteer Teaching Junior Mathematics
 												@ San He Junior High School, Luxi, Yunan
 											</ul>
@@ -291,7 +309,7 @@
 
 										<section>
 											<h4>September</h4>
-											<ul>
+											<ul class="edu">
 												&#127979 Enrolled in <a href="https://www.sjtu.edu.cn/">Shanghai Jiao Tong University</a>.
 												<li>Major: Electrical and Computer Engineering</li>
 												<li>
@@ -318,7 +336,7 @@
 
 										<section>
 											<h4>September</h4>
-											<ul>
+											<ul class="edu">
 												&#127979 Enrolled in
 												<a href="http://www.cfls.net.cn/">Chengdu Foreign Languages School</a> (Senior)
 												<li>Awarded 1st-class Scholarship</li>
@@ -333,7 +351,7 @@
 
 										<section>
 											<h4>September</h4>
-											<ul>
+											<ul class="edu">
 												&#127979 Enrolled in
 												<a href="http://www.cfls.net.cn/">Chengdu Foreign Languages School</a> (Junior)
 												<li>Awarded 2nd-class Scholarship</li>
@@ -455,6 +473,7 @@
 					</section>
 
 		</div>
+
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.poptrox.min.js"></script>
