--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
 					<section id="five">
 						<h2>Posts</h2>
 						<ul>
-							<li>I was born and raised up in Chengdu, the city famous for being the home of pandas.</li>
+							<li>I was born and raised up in Chengdu, the home of pandas.</li>
 							<li>My dream school during high school was The University of Hong Kong (HKU),
 								yet I declined the offer of BSc(QFin) in pursuit of my engineering dream.</li>
 							<li>I am a regular social media user, and I post Instagram more frequently.</li>
