--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
 					</header>
 
 					<p>
+						Here is a virtual but warm greeting from Ziqiao, as you just came across his page!
+						Well, many of my non-Chinese friends found it hard to pronounce my Chinese name,
+						so...it's absolutely fine to just call me <i>Martin</i> alternatively.
+					</p>
+
+					<p>
 						I am a junior student at University of Michigan in
 						<a href="https://cse.engin.umich.edu/academics/undergraduate/computer-science-eng/">
 							Computer Science
@@ -92,9 +98,7 @@
 						at Shanghai Jiao Tong University.
 						I am currently exploring my research interests
 						in how machine learning can play a role
-						in natural language processing and bio-informatics.<br><br>
-						Many of my non-Chinese friends found it hard to pronounce my Chinese name,
-						so...it's absolutely fine to just call me <i>Martin</i> alternatively.
+						in natural language processing and bio-informatics.
 					</p>
 
 					<div class="row">
@@ -134,20 +138,20 @@
 
 								<div class="row">
 									<div class="column">
-										<span style="font-size: small; "><ul>
+										<span style="font-size: small; "><ul class="alt">
 											<li>Machine Learning (A+)</li>
 											<li>Artificial Intelligence (A)</li>
 											<li>Web Systems (A)</li>
 										</ul></span>
 								  	</div>
 								  	<div class="column">
-										<span style="font-size: small; "><ul>
+										<span style="font-size: small; "><ul class="alt">
 											<li>Data Structure and Algorithm (A)</li>
 											<li>Computer Organization (A+)</li>
 										</ul></span>
 								  	</div>
 									<div class="column">
-										<span style="font-size: small; "><ul>
+										<span style="font-size: small; "><ul class="alt">
 											<li>Numerical Analysis (A+)</li>
 											<li>Probability Theory (A)</li>
 										</ul></span>
@@ -162,14 +166,14 @@
 
 								<div class="row">
 								  	<div class="column">
-										<span style="font-size: small; "><ul>
+										<span style="font-size: small; "><ul class="alt">
 											<li>Programming and Data Structure (A)</li>
 											<li>Logic Design (A)</li>
 											<li>Analog Circuits (A-)</li>
 										</ul></span>
 								  	</div>
 									<div class="column">
-										<span style="font-size: small; "><ul>
+										<span style="font-size: small; "><ul class="alt">
 											<li>Discrete Mathematics (A)</li>
 											<li>Honors Mathematics II-IV (A-, A, A-)</li>
 										</ul></span>
@@ -181,7 +185,7 @@
 								<b>Technischen Universitat Berlin </b><br>
 								<i> Winter Program || Jan. 2019 - Feb. 2019</i><br>
 
-								<span style="font-size: small; "><ul>
+								<span style="font-size: small; "><ul class="alt">
 									<li>Programming in Java (A)</li>
 								</ul></span>
 							</li>
@@ -389,7 +393,7 @@
 					<section id="five">
 						<h2>Posts</h2>
 						<ul>
-							<li>I was born and raised up in Chengdu, the home of pandas.</li>
+							<li>I was born and raised up in Chengdu, the city famous for being the home of pandas.</li>
 							<li>My dream school during high school was The University of Hong Kong (HKU),
 								yet I declined the offer of BSc(QFin) in pursuit of my engineering dream.</li>
 							<li>I am a regular social media user, and I post Instagram more frequently.</li>
