--- a/index.html
+++ b/index.html
@@ -209,6 +209,14 @@
 								<!-- 2020 -->
 									<section class="year">
 										<h3>2020</h3>
+										
+										<section>
+											<h4>May - Present</h4>
+											<ul class="tutor">
+												&#128214 Teaching Assistant for Programming and Data Structure<br>
+												(VE280 @ Shanghai Jiao Tong University)
+											</ul>
+										</section>
 
 										<section>
 											<h4>January - Present</h4>
