--- a/index.html
+++ b/index.html
@@ -213,6 +213,14 @@
 										<section>
 											<h4>May - Present</h4>
 											<ul class="tutor">
+												&#128214 Teaching Assistant for Artificial Intelligence<br>
+												(VE492 @ Shanghai Jiao Tong University)
+											</ul>
+										</section>
+										
+										<section>
+											<h4>May - Present</h4>
+											<ul class="tutor">
 												&#128214 Teaching Assistant for Programming and Data Structure<br>
 												(VE280 @ Shanghai Jiao Tong University)
 											</ul>
