--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 											<h4>May - Present</h4>
 											<ul class="tutor">
 												&#128214 Teaching Assistant for Programming and Data Structure<br>
-												(VE280 @ Shanghai Jiao Tong University)
+												(<a href="https://github.com/ve280">VE280</a> @ Shanghai Jiao Tong University)
 											</ul>
 										</section>
 
