--- a/index.html
+++ b/index.html
@@ -211,6 +211,16 @@
 										<h3>2020</h3>
 										
 										<section>
+											<h4>August - Present</h4>
+											<ul class="research">
+												&#128270 Research Assistant at
+												<a href="http://lair.cse.msu.edu/" target="_blank">The Language And Interaction Research (LAIR)</a><br>
+												(Department of Computer Science and Engineering @ University of Michigan)
+												<li>Instructed by <a href="https://web.eecs.umich.edu/~chaijy/">Joyce Chai</a></li>
+											</ul>
+										</section>
+										
+										<section>
 											<h4>May - Present</h4>
 											<ul class="tutor">
 												&#128214 Teaching Assistant for Artificial Intelligence<br>
@@ -232,6 +242,7 @@
 												&#128270 Research Assistant at
 												<a href="https://jieliu6.github.io/" target="_blank">Liu Lab</a><br>
 												(Medical School @ University of Michigan)
+												<li>Instructed by <a href="https://jieliu6.github.io/">Jie Liu</a></li>
 											</ul>
 										</section>
 
@@ -247,6 +258,7 @@
 												&#128270 Research Assistant at
 												<a href="http://foreseer.si.umich.edu/" target="_blank">Foreseer</a><br>
 												(School of Information @ University of Michigan)
+												<li>Instructed by <a href="http://www-personal.umich.edu/~qmei/">Qiaozhu Mei</a></li>
 											</ul>
 										</section>
 
