--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 										</section>
 										
 										<section>
-											<h4>May - Present</h4>
+											<h4>May - August</h4>
 											<ul class="tutor">
 												&#128214 Teaching Assistant for Artificial Intelligence<br>
 												(VE492 @ Shanghai Jiao Tong University)
@@ -229,7 +229,7 @@
 										</section>
 										
 										<section>
-											<h4>May - Present</h4>
+											<h4>May - August</h4>
 											<ul class="tutor">
 												&#128214 Teaching Assistant for Programming and Data Structure<br>
 												(<a href="https://github.com/ve280">VE280</a> @ Shanghai Jiao Tong University)
