--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					</p>
 
 					<p>
-						I am a junior student at University of Michigan in
+						I am a Senior student at University of Michigan in
 						<a href="https://cse.engin.umich.edu/academics/undergraduate/computer-science-eng/">
 							Computer Science
 						</a>,
@@ -242,7 +242,7 @@
 												&#128270 Research Assistant at
 												<a href="https://jieliu6.github.io/" target="_blank">Liu Lab</a><br>
 												(Medical School @ University of Michigan)
-												<li>Instructed by <a href="https://jieliu6.github.io/">Jie Liu</a></li>
+												<li>With <a href="http://www.jiaqima.com/">Jiaqi Ma</a>, instructed by <a href="https://jieliu6.github.io/">Jie Liu</a></li>
 											</ul>
 										</section>
 
@@ -405,8 +405,8 @@
 								<a href="images/fulls/01.jpg" class="image fit thumb">
 									<img src="images/thumbs/01.jpg" alt="" />
 								</a>
-								<h3>To be updated</h3>
-								<p>This section is being built. To be updated...</p>
+								<h3>Under Construction</h3>
+								<p>This section is to be updated...I was quite busy these days lol.</p>
 							</article>
 
 						</div>
@@ -421,7 +421,7 @@
 					<section id="five">
 						<h2>Posts</h2>
 						<ul>
-							<li>I was born and raised up in Chengdu, the city famous for being the home of pandas.</li>
+							<li>I was born and raised up in Chengdu, the home of pandas.</li>
 							<li>My dream school during high school was The University of Hong Kong (HKU),
 								yet I declined the offer of BSc(QFin) in pursuit of my engineering dream.</li>
 							<li>I am a regular social media user, and I post Instagram more frequently.</li>
